Added change in pom.xml and added security authentication.

--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kaluzny</groupId>
-    <artifactId>spring-boot-rest-service</artifactId>
+    <artifactId>rest-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>REST Service in Spring Boot</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -40,6 +38,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
