Updated the DatabaseConfig.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ server:
   sessionTimeout: 30
 
 #PackagesToScan
-entitymanager:
+entityManager:
   packagesToScan: com.kaluzny.domain
 
 # Database
