--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,14 @@
 spring:
   profiles:
     active: development
+
+  datasource:
+    dbcp2:
+      driver: org.postgresql.Driver
+      url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
+      username: postgres
+      password: postgres
+
 logging:
   pattern:
     console: "%d %-5level %logger : %msg%n"
@@ -19,11 +27,11 @@ entityManager:
   packagesToScan: com.kaluzny.domain
 
 # Database
-database:
-  driverClassName: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
-  username: postgres
-  password: postgres
+#database:
+ # driver: org.postgresql.Driver
+  #url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
+  #username: postgres
+  #password: postgres
 
 # Hibernate
 hibernate:
