--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,6 @@ spring:
   profiles:
     active: development
 
-  datasource:
-    dbcp2:
-      driver: org.postgresql.Driver
-      url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
-      username: postgres
-      password: postgres
-
 logging:
   pattern:
     console: "%d %-5level %logger : %msg%n"
@@ -27,11 +20,11 @@ entityManager:
   packagesToScan: com.kaluzny.domain
 
 # Database
-#database:
- # driver: org.postgresql.Driver
-  #url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
-  #username: postgres
-  #password: postgres
+database:
+  driver: org.postgresql.Driver
+  url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
+  username: postgres
+  password: postgres
 
 # Hibernate
 hibernate:
