--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,22 @@
 spring:
   profiles:
     active: development
-
+# Database
+  datasource:
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
+    username: postgres
+    password: postgres
+# JPA properties
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: false
+# Logger configuration
 logging:
   pattern:
     console: "%d %-5level %logger : %msg%n"
@@ -14,21 +29,3 @@ logging:
 server:
   port: 8080
   sessionTimeout: 30
-
-#PackagesToScan
-entityManager:
-  packagesToScan: com.kaluzny.domain
-
-# Database
-database:
-  driver: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
-  username: postgres
-  password: postgres
-
-# Hibernate
-hibernate:
-  dialect: org.hibernate.dialect.PostgreSQLDialect
-  hbm2ddl.auto: update
-  show_sql: true
-  format_sql: true
