Security configuration is added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,8 @@ logging:
 server:
   port: 8080
   sessionTimeout: 30
+# Security configuration
+security:
+  user:
+    name: user
+    password: user
