--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,18 @@
 spring:
   profiles:
     active: development
-# Database
+  # Security configuration
+  security:
+    user:
+      name: user
+      password: user
+  # Database
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/book_db?createDatabaseIfNotExist=true
     username: postgres
     password: postgres
-# JPA properties
+  # JPA properties
   jpa:
     hibernate:
       ddl-auto: none # When you launch the application for the first time - switch "none" at "create"
@@ -17,7 +22,6 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
     generate-ddl: false
-
 # Logger configuration
 logging:
   pattern:
@@ -27,10 +31,4 @@ logging:
     org.hibernate: DEBUG
 # Server configuration
 server:
-  port: 8080 #8091
-  sessionTimeout: 30
-# Security configuration
-security:
-  user:
-    name: user
-    password: user
+  port: 8081
