--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,15 @@
     <packaging>jar</packaging>
 
     <properties>
+        <project.encoding>UTF-8</project.encoding>
+        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+
         <java.version>1.8</java.version>
         <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
         <lombok.version>1.18.10</lombok.version>
         <postgreSQL.version>42.2.8</postgreSQL.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
     <dependencies>
@@ -69,6 +74,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
