--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,19 +16,19 @@ spring:
   # JPA properties
   jpa:
     hibernate:
-      ddl-auto: none # When you launch the application for the first time - switch "none" at "create"
+      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
     show-sql: true
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
-    generate-ddl: false
+    generate-ddl: true
 # Logger configuration
 logging:
   pattern:
     console: "%d %-5level %logger : %msg%n"
   level:
-    org.springframework: INFO
-    org.hibernate: DEBUG
+    org.springframework: info
+    org.hibernate: debug
 # Server configuration
 server:
-  port: 8081 #set your port
+  port: 8080 #set your port
