--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
         <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
 
-        <java.version>1.8</java.version>
-        <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
-        <lombok.version>1.18.10</lombok.version>
+        <java.version>17</java.version>
+        <spring.boot.version>3.1.1</spring.boot.version>
+        <lombok.version>1.18.28</lombok.version>
         <postgreSQL.version>42.2.8</postgreSQL.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+
     </properties>
 
     <dependencies>
@@ -74,7 +74,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
+
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
